--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- others -->
-  <title>SisGeo</title>
+  <title>SisGEO 1.0 | Unifal-MG</title>
   <base href="/">
 
   <!-- favicon -->
