- altera a rota base do projeto de "/app" para apenas "/" - adiciona componente about, que será a página principal dos projetos do sisgeo - adiciona outro componente (ngx-spinner) no carregamento da página - altera lógica do parâmetro da url de /webmap, que agora apenas aceita o parâmetro "hl" para definir a linguagem do site - modifica método de restaurar mapa, para restaurar na posição da primeira layer da primeira vision - corrigem ordem dos parâmetro que eram passados na método "map" de terrabrasilisApi, latitude e longitude estavam invertidos - diminui altura da div que fica o logo di sisgeo - altera as algumas cores do modal de  getFeatureInfo que ainda estavam em verde

--- a/src/index-pages/production/index.html
+++ b/src/index-pages/production/index.html
@@ -9,8 +9,8 @@
     <title>SisGEO 1.0 | Unifal-MG</title>
     <base href="/">
     <!-- favicon -->
-    <link rel="shortcut icon" href="/app/assets/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/app/assets/favicon.ico" type="image/x-icon">    
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">    
     <!-- css -->
     <!-- outside -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -39,18 +39,18 @@
         <app-root></app-root>
     </div>
     <!-- scripts -->
-    <script src="/app/assets/js/jquery/jquery-3.3.1.min.js" ></script>
+    <script src="/assets/js/jquery/jquery-3.3.1.min.js" ></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" ></script>
-    <script src="/app/assets/js/map/popper.min.js"></script>
-    <script src="/app/assets/js/jquery-ui/jquery-ui.min.js" ></script>
-    <script src="/app/assets/js/jquery-ui/jquery.loading.min.js" ></script>
-    <script src="/app/assets/js/lodash/lodash-4.7.10.min.js"></script>
-    <script src="/app/assets/js/gridstack/gridstack.js"></script>
-    <script src="/app/assets/js/gridstack/gridstack.jQueryUI.js"></script>
-    <script src="/app/assets/js/map/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="/app/assets/js/map/manipulate-cookie.js"></script>
-    <script src="/app/assets/js/map/rangeslider.js"></script>
-    <script src="/app/assets/js/map/rangeslider.min.js"></script>
-    <script src="/app/assets/js/map/scripts.js"></script>
+    <script src="/assets/js/map/popper.min.js"></script>
+    <script src="/assets/js/jquery-ui/jquery-ui.min.js" ></script>
+    <script src="/assets/js/jquery-ui/jquery.loading.min.js" ></script>
+    <script src="/assets/js/lodash/lodash-4.7.10.min.js"></script>
+    <script src="/assets/js/gridstack/gridstack.js"></script>
+    <script src="/assets/js/gridstack/gridstack.jQueryUI.js"></script>
+    <script src="/assets/js/map/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="/assets/js/map/manipulate-cookie.js"></script>
+    <script src="/assets/js/map/rangeslider.js"></script>
+    <script src="/assets/js/map/rangeslider.min.js"></script>
+    <script src="/assets/js/map/scripts.js"></script>
 </body>
 </html>
