--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,20 @@
     var global = global || window;
     var Buffer = Buffer || [];
     var process = process || {
-        env: { DEBUG: undefined },
-        version: []
+      env: { DEBUG: undefined },
+      version: []
     };
   </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164898157-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-164898157-1');
+  </script>
+
 </head>
 
 <body>
