--- a/src/index-pages/production/index.html
+++ b/src/index-pages/production/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <!-- metas -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge; chrome=1">
@@ -10,19 +11,21 @@
     <base href="/">
     <!-- favicon -->
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">    
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <!-- css -->
     <!-- outside -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-77404603-4"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164898157-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'UA-77404603-4');
+
+        gtag('config', 'UA-164898157-1');
     </script>
     <script>
         var global = global || window;
@@ -33,16 +36,17 @@
         };
     </script>
 </head>
+
 <body>
     <!-- main container -->
-    <div class="wrapper" id="connected" >
+    <div class="wrapper" id="connected">
         <app-root></app-root>
     </div>
     <!-- scripts -->
-    <script src="/assets/js/jquery/jquery-3.3.1.min.js" ></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" ></script>
+    <script src="/assets/js/jquery/jquery-3.3.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="/assets/js/map/popper.min.js"></script>
-    <script src="/assets/js/jquery-ui/jquery-ui.min.js" ></script>
+    <script src="/assets/js/jquery-ui/jquery-ui.min.js"></script>
     <script src="/assets/js/lodash/lodash-4.7.10.min.js"></script>
     <script src="/assets/js/gridstack/gridstack.js"></script>
     <script src="/assets/js/gridstack/gridstack.jQueryUI.js"></script>
@@ -52,4 +56,5 @@
     <script src="/assets/js/map/rangeslider.min.js"></script>
     <script src="/assets/js/map/scripts.js"></script>
 </body>
+
 </html>
