- renomeia o ícone de .ico e altera sua referência do index do production, para /sisgeo-favicon.ico, retirando o /assets - corrige as urls de sobre e contato - remove referência a layer MDEHC

--- a/src/index-pages/production/index.html
+++ b/src/index-pages/production/index.html
@@ -10,8 +10,8 @@
     <title>SisGEO 1.0 | Unifal-MG</title>
     <base href="/">
     <!-- favicon -->
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/sisgeo-favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/sisgeo-favicon.ico" type="image/x-icon">
     <!-- css -->
     <!-- outside -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
