--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   <base href="/">
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/sisgeo-favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/sisgeo-favicon.ico" type="image/x-icon">
   <!-- css -->
   <!-- outside -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
