Arrumando links e click nos projetos da home na volta

--- a/src/index-pages/production/index.html
+++ b/src/index-pages/production/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" href="/sisgeo-favicon.ico" type="image/x-icon">
     <!-- css -->
     <!-- outside -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
